[package]
name = "personal_blog_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6"
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-rustls"] }
dotenv = "0.15"
lettre = { version = "0.10", features = ["smtp-transport"] }
